--- a/View/Layout/baselogin.twig.html
+++ b/View/Layout/baselogin.twig.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="description" content="with draggable and editable events" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
             <!-- Bootstrap 3.3.6 -->
