--- a/App/View/Login/index.twig.html
+++ b/App/View/Login/index.twig.html
@@ -11,7 +11,7 @@
         </div>-->
     </div>
 
-<form class="form-horizontal" name="form_login" id="form_login" method="POST" action="validar_usuario" autocomplete='off'>
+<form class="form-horizontal" name="form_login" id="form_login" method="POST" action="LoginC/validar" autocomplete='off'>
     
     <div class="input-group">
         <span class="input-group-addon"><i class="fa fa-users"></i></span>
