--- a/App/View/Layout/baselogin.twig.html
+++ b/App/View/Layout/baselogin.twig.html
@@ -26,8 +26,10 @@
         
       </footer>
 
-      {% block codeScript %}
-        
+      {% block javascripts %}
+        <script type="text/javascript" src="./Assets/js/jquery-2.1.4.min.js"></script>
+        <script type="text/javascript" src="./Assets/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="./Assets/js/validator.js"></script>
 
       {% endblock %}
     </body>
