--- a/App/View/Login/index.twig.html
+++ b/App/View/Login/index.twig.html
@@ -6,27 +6,20 @@
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <h3 class="box-title" style="text-align: center">Iniciar Sesión</h3>
         </div>
-        <!--<div class="text-right col-lg-6">
-            <a href="{#{path('new_user')}#}">Crear cuenta</a>
-        </div>-->
     </div>
 
-<form class="form-horizontal" name="form_login" id="form_login" method="POST" action="Login/validar" autocomplete='off'>
+<form class="form-horizontal" name="form_login" id="form_login" method="POST" action="Login/validar" autocomplete='off' data-toggle="validator">
     
     <div class="input-group">
         <span class="input-group-addon"><i class="fa fa-users"></i></span>
-        <input type="text" class="form-control" id="usuario" name="usuario" value="{{usuario}}" placeholder="DNI" autocomplete="off">
+        <input type="text" class="form-control" id="usuario" name="usuario" value="{{usuario}}" placeholder="DNI" required>
     </div>
     <br>
     <div class="input-group">
         <span class="input-group-addon"><i class="fa fa-lock">&nbsp;&nbsp;</i></span>
-        <input type="password" class="form-control" id="password" name="password" value="{{password}}" placeholder="Contraseña" autocomplete="off">
+        <input type="password" class="form-control" id="password" name="password" value="{{password}}" placeholder="Contraseña" required>
     </div>
     <br>
-    <!--<div class="input-group">
-        <a><i class="fa fa-unlock-alt"></i>&nbsp;¿Has olvidado tu contraseña?</a>
-    </div>
-    <br>-->
     
     <div class="row">
         <div class="col-lg-7 col-md-6 col-sm-6 col-xs-12">
@@ -42,8 +35,11 @@
 
 {% endblock %}
 
-{% block codeScript %}
+{% block javascripts %}
+{{ parent() }}
 <script type="text/javascript">
+
+    $('#form_login').validator()
 
     $('#usuario, #password').on("keyup", function(e){
         if(e.keyCode == 13)
