--- a/App/View/Login/index.twig.html
+++ b/App/View/Login/index.twig.html
@@ -8,7 +8,7 @@
         </div>
     </div>
 
-<form class="form-horizontal" name="form_login" id="form_login" method="POST" action="Login/validar" autocomplete='off' data-toggle="validator">
+<form class="form-horizontal" name="form_login" id="form_login" method="POST" action="index.php?url=Login/validar" autocomplete='off' data-toggle="validator">
     
     <div class="input-group">
         <span class="input-group-addon"><i class="fa fa-users"></i></span>
